# askmetrading-codeimpact

./: .gitignore  Cargo.toml  README.md  deny.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
codeimpact/: Cargo.toml
codeimpact/hexagon/: Cargo.toml
codeimpact/hexagon/src/: lib.rs
codeimpact/hexagon/src/domain_model/: analysis_rule.rs  analysis_target.rs  code_location.rs  code_metrics.rs  ecological_impact.rs  economic_impact.rs  efficiency_class.rs  errors.rs  mod.rs  proactive_analyzer.rs  reactive_analyzer.rs
codeimpact/hexagon/src/gateways-secondary_ports/: code_reader_port.rs  mod.rs  report_writer_port.rs
codeimpact/hexagon/src/use_cases-application_services/: mod.rs  run_analysis.rs
codeimpact/primaries/: Cargo.toml
codeimpact/primaries/src/: main.rs
codeimpact/secondaries/: Cargo.toml
codeimpact/secondaries/src/gateways/: mod.rs
codeimpact/secondaries/src/gateways/code_readers/: code_reader_stub.rs  file_system_code_reader.rs
codeimpact/secondaries/src/gateways/report_writers/: console_report_writer.rs  mod.rs  report_writer_stub.rs
codeimpact/tests/fixtures/: sample.rs
codeimpact/tests/hexagon.unit_test/: Cargo.toml
codeimpact/tests/hexagon.unit_test/tests/: code_metrics_test.rs  proactive_analyzer_test.rs  run_analysis_test.rs
codeimpact/tests/primaries.e2e_test/: Cargo.toml
codeimpact/tests/primaries.e2e_test/tests/: cli_e2e_test.rs
codeimpact/tests/secondaries.integration_test/: Cargo.toml
codeimpact/tests/secondaries.integration_test/tests/: console_report_writer_test.rs  file_system_code_reader_test.rs
docs/: ADR-0001-rust-core-hexagon.md  ADR-0002-single-bounded-context.md  ADR-0003-no-stryker.md  ADR-0004-economic-impact-heuristics.md  ADR-0005-package-by-context.md  ADR-0006-security-measures.md  ADR-0007-json-report-format.md  ADR-0008-html-report-format.md  ADR-0009-ci-supply-chain.md  ADR-0010-measurement-honesty.md  ADR-0011-stress-test-workspace-scope.md  ADR-0012-hidden-complexity-single-source.md  ADR-0013-parser-hexagon-loop-call-contract.md  ADR-0014-parser-impl-methods-qualified-names.md  ADR-0015-subprocess-canary-parse-isolation.md  ADR-0016-io-in-loops-type-asserts-name-abstains.md  ADR-0017-alert-thresholds-config-schema.md  ADR-0018-de-rustified-hexagon-language-agnostic.md  ADR-0019-configuration-file-analysis-config.md  ADR-0020-multi-language-parsing-tree-sitter.md  ADR-0021-honest-degradation-metric-support-flows-to-writers.md  ADR-0022-csharp-io-in-loops-static-asserts-receiver-abstains.md  ADR-0023-csharp-cross-file-dependency-namespace-index.md  ADR-0024-deps-index-cache-arc-identity-keying.md  ADR-0025-coverage-tooling-recipe.md  ADR-0026-mixed-language-metric-support-aggregation.md  ADR-0027-overflow-checks-release.md  INDEX.md  architecture.md  glossary.md
docs/technical/: alert-thresholds.md  console-report-enriched.md  economic-impact.md  html-report.md  json-report-schema.md
scripts/: coverage.sh
src/contexts/codeimpact/hexagon/: Cargo.toml
src/contexts/codeimpact/secondaries/: Cargo.toml
src/contexts/codeimpact/secondaries/src/gateways/: mod.rs
src/contexts/codeimpact/secondaries/src/gateways/code_parsers/: code_parser_stub.rs  mod.rs  syn_code_parser.rs
src/contexts/codeimpact/secondaries/src/gateways/code_parsers/tree_sitter/: io_signatures.rs  language_profile.rs  mod.rs  tree_sitter_code_parser.rs
src/contexts/codeimpact/secondaries/src/gateways/code_parsers/tree_sitter/io_signatures/: classifier.rs  csharp.rs
src/contexts/codeimpact/secondaries/src/gateways/code_parsers/tree_sitter/queries/: csharp.scm  csharp_deps.scm
src/contexts/codeimpact/secondaries/src/gateways/code_readers/: code_reader_stub.rs  file_system_code_reader.rs  mod.rs
src/contexts/codeimpact/secondaries/src/gateways/config_readers/: file_system_config_reader.rs  mod.rs
src/contexts/codeimpact/secondaries/src/gateways/report_writers/: console_report_writer.rs  html_report_writer.rs  humanize.rs  json_report_writer.rs  mod.rs  report_writer_stub.rs
src/contexts/codeimpact/secondaries/src/gateways/report_writers/html/: assets.rs  base64.rs  mod.rs  view_model.rs
src/contexts/codeimpact/secondaries/src/gateways/report_writers/html/fonts/: LICENSE-Barlow-OFL.txt
src/contexts/codeimpact/secondaries/src/gateways/test_runners/: cargo_test_runner.rs  mod.rs  test_runner_stub.rs
src/contexts/codeimpact/tests/hexagon.unit_test/: Cargo.toml
src/contexts/codeimpact/tests/hexagon.unit_test/tests/: alert_thresholds_test.rs  analysis_config_test.rs  call_graph_test.rs  code_metrics_test.rs  complexity_detector_test.rs  ecological_impact_test.rs  economic_impact_test.rs  file_consumption_graph_test.rs  file_filter_test.rs  language_capabilities_test.rs  language_test.rs  overflow_checks_release_profile_test.rs  parser_registry_test.rs  proactive_analyzer_test.rs  run_analysis_html_test.rs  run_analysis_json_test.rs  run_analysis_test.rs  source_guard_test.rs  stress_test_run_test.rs
src/contexts/codeimpact/tests/secondaries.integration_test/: Cargo.toml
src/contexts/codeimpact/tests/secondaries.integration_test/runtime-security-check/: check.mjs  package-lock.json  package.json
src/contexts/codeimpact/tests/secondaries.integration_test/src/: js_runtime_check.rs  lib.rs  rendering_gate.rs
src/contexts/codeimpact/tests/secondaries.integration_test/tests/: cargo_test_runner_test.rs  console_report_writer_test.rs  cross_writer_consistency_test.rs  ensure_bin_built_profile_detection_test.rs  file_system_code_reader_test.rs  file_system_config_reader_test.rs  html_renderer_gate_hardening_test.rs  html_renderer_runtime_security_test.rs  html_report_writer_test.rs  json_report_writer_test.rs  parse_probe_cache_correctness_test.rs  parse_probe_cache_test.rs  parse_probe_defense_in_depth_test.rs  parse_probe_full_pipeline_test.rs  parse_probe_memory_ceiling_test.rs  parse_probe_missing_test.rs  parse_probe_pathological_test.rs  parse_probe_rlimit_test.rs  parse_probe_timeout_test.rs  parse_probe_unknown_exit_test.rs  run_analysis_csharp_source_roots_test.rs  syn_code_parser_test.rs
(+43 files in other folders)
