[workspace]
resolver = "2"
members = [
    "src/contexts/codeimpact/hexagon",
    "src/contexts/codeimpact/secondaries",
    "src/contexts/codeimpact/primaries",
    "src/contexts/codeimpact/tests/hexagon.unit_test",
    "src/contexts/codeimpact/tests/secondaries.integration_test",
    "src/contexts/codeimpact/tests/primaries.e2e_test",
]