[workspace]
resolver = "2"
members = [
    "src/contexts/codeimpact/hexagon",
    "src/contexts/codeimpact/secondaries",
    "src/contexts/codeimpact/primaries",
    "src/contexts/codeimpact/tests/hexagon.unit_test",
    "src/contexts/codeimpact/tests/secondaries.integration_test",
    "src/contexts/codeimpact/tests/primaries.e2e_test",
]

# Matches the Apache-2.0 LICENSE file at the repo root. Declared once here so
# `cargo deny check licenses` (#86) can resolve every workspace member's
# license instead of reporting it unlicensed.
[workspace.package]
license = "Apache-2.0"

# #51 — silent integer wrap in --release is exactly the "plausible but
# false" number ADR-0010/ADR-0012 forbid, and a #[should_panic] invariant
# test on a debug_assert! was proven (Security audit, #46/#49) to pass
# --release without ever panicking. overflow-checks converts wrap -> hard
# panic; debug-assertions makes debug_assert! present in the shipped
# artifact. See overflow_checks_release_profile_test.rs for the empirical
# proof and #51's arithmetic-site audit for why no call site needed a
# saturating/Unmeasurable change alongside this flag.
[profile.release]
overflow-checks = true
debug-assertions = true