[package]
name = "codeimpact-hexagon"
version = "0.1.0"
edition = "2021"
description = "CodeImpact domain model + application ports + use cases. Zero external dependencies."

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde-support = ["dep:serde"]