[package]
name = "codeimpact-primaries"
version = "0.1.0"
edition = "2021"
description = "CodeImpact driving adapters: CLI entry point."

[[bin]]
name = "codeimpact"
path = "src/main.rs"

[dependencies]
codeimpact-hexagon = { path = "../hexagon" }
codeimpact-secondaries = { path = "../secondaries" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"