[package]
name = "codeimpact-secondaries"
version = "0.1.0"
edition = "2021"
description = "CodeImpact driven adapters: filesystem, profiling, test runner, report writers."

[dependencies]
codeimpact-hexagon = { path = "../hexagon" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt", "macros"] }