[package]
name = "codeimpact_secondaries"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codeimpact-parse-probe"
path = "src/bin/parse_probe.rs"
required-features = ["syn-parser"]

[dependencies]
codeimpact_hexagon = { path = "../hexagon" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"], optional = true }
proc-macro2 = { version = "1", features = ["span-locations"], optional = true }
# US31 (#31): the file walk migrates from walkdir to `ignore` (ripgrep's
# walker, which replaces walkdir below) to gain native `.gitignore`
# support; `globset` compiles the include/exclude patterns FileFilter
# validates but does not itself match (D1/D3 — glob compilation is an
# adapter concern, hexagon stays zero-dep).
ignore = "0.4"
globset = "0.4"
# US16 T2 — C-scanner grammar only (`tree-sitter-c-sharp` ships `scanner.c`,
# confirmed wasm32-compatible by the architecture spike). The `wasm`/
# `wasmtime-c-api` cargo features on `tree-sitter` itself are NEVER enabled
# here — they pull in cranelift and break native builds; the browser path
# stays open at ~zero cost by simply not touching them.
tree-sitter = { version = "0.26", default-features = false, features = ["std"], optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }

# `libc` backs `parse_probe.rs`'s `RLIMIT_AS` call, which is itself
# `#[cfg(unix)]` (#63) — an unconditional dependency would pull it in on
# Windows too, for zero use (QA nit, retry 1).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["lang-rust", "lang-csharp"]
syn-parser = ["syn", "proc-macro2"]
lang-rust = ["syn-parser"]
lang-csharp = ["dep:tree-sitter", "dep:tree-sitter-c-sharp"]

[dev-dependencies]
tempfile = "3"
