[package]
name = "codeimpact_hexagon_unit_test"
version = "0.1.0"
edition = "2021"

[dependencies]
codeimpact_hexagon = { path = "../../hexagon" }
codeimpact_secondaries = { path = "../../secondaries" }

[lib]
test = false
doctest = false

[[test]]
name = "call_graph_test"
path = "tests/call_graph_test.rs"

[[test]]
name = "code_metrics_test"
path = "tests/code_metrics_test.rs"

[[test]]
name = "complexity_detector_test"
path = "tests/complexity_detector_test.rs"

[[test]]
name = "ecological_impact_test"
path = "tests/ecological_impact_test.rs"

[[test]]
name = "economic_impact_test"
path = "tests/economic_impact_test.rs"

[[test]]
name = "file_consumption_graph_test"
path = "tests/file_consumption_graph_test.rs"

[[test]]
name = "proactive_analyzer_test"
path = "tests/proactive_analyzer_test.rs"

[[test]]
name = "run_analysis_test"
path = "tests/run_analysis_test.rs"

[[test]]
name = "run_analysis_json_test"
path = "tests/run_analysis_json_test.rs"

[[test]]
name = "stress_test_run_test"
path = "tests/stress_test_run_test.rs"

[[test]]
name = "run_analysis_html_test"
path = "tests/run_analysis_html_test.rs"