[package]
name = "codeimpact_secondaries_integration_test"
version = "0.1.0"
edition = "2021"

[dependencies]
codeimpact_hexagon = { path = "../../hexagon" }
codeimpact_secondaries = { path = "../../secondaries" }
serde_json = "1"
tempfile = "3"

[lib]
test = false
doctest = false

# Fake canaries (#63) — portable Rust [[bin]]s standing in for
# `codeimpact-parse-probe` in tests, injected via `CODEIMPACT_PARSE_PROBE`.
[[bin]]
name = "codeimpact-count-probe"
path = "src/bin/count_probe.rs"
test = false

[[bin]]
name = "codeimpact-sleep-probe"
path = "src/bin/sleep_probe.rs"
test = false

[[bin]]
name = "codeimpact-exit-seven-probe"
path = "src/bin/exit_seven_probe.rs"
test = false